# kloudkut

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  Makefile  PRODUCTION_READY.md  QUICKSTART.md  README.md  README_OLD.md  RELEASE_NOTES.md  SECURITY.md  TROUBLESHOOTING.md  benchmark.py  dashboard.py  docker-compose.yml  kloudkut_report.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  verify.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-push.yml  ci-cd.yml  main.yml  release.yml
config/: config.yaml  default.yaml
docs/: API.md  ARCHITECTURE.md
examples/: custom_scanner.py  lambda_handler.py
kloudkut/: __init__.py  __main__.py  reports.py
kloudkut/core/: __init__.py  aws.py  config.py  health.py  history.py  metrics.py  notify.py  pricing.py  retry.py  scanner.py  telemetry.py  validation.py
kloudkut/scanners/: __init__.py  analytics.py  compute.py  database.py  network.py  security.py  storage.py
tests/: test_kloudkut.py  test_world_class.py
